Fix white gap on mobile/small screens.

--- a/bs/css/main.css
+++ b/bs/css/main.css
@@ -1,10 +1,11 @@
-/* 60px to make the container go all the way to the bottom of the topbar */
-
 body {
-  padding-top: 60px; 
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+ body {
+    padding-top: 0px;
 }
 
-/* Jumbotron! */
 .jumbotron {
   margin: 80px 0;
   text-align: center;
@@ -14,13 +15,13 @@ body {
   font-size: 100px;
   line-height: 1;
 }
-      
 .jumbotron .lead {
-    font-size: 24px;
-    line-height: 1.25;
+  font-size: 24px;
+  line-height: 1.25;
 }
 
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
 }
+  
